# devmind

./: .gitignore  LICENSE  MANIFEST.in  README.md  conftest.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
devmind/: __init__.py
devmind/api/: server.py
devmind/cli/: cli.py
devmind/infra/: analyzer.py
devmind/llm/: engine.py
devmind/tracer/: tracer.py
scripts/: smoke_test.py
tests/: test_devmind.py
